Funciones reto taller1

--- a/taller1/figuras.html
+++ b/taller1/figuras.html
@@ -54,6 +54,30 @@
           <button onclick="areaCirculo()">Area</button>
         </form>
       </section>
+      <section>
+        <h3>Reto: Calcula el area y perimetro de un triangulo isosceles</h3>
+        <form action="">
+          <div>
+            <label for="lado1_isosceles">Lado1:</label>
+            <input id="lado1_isosceles" name="lado1_isosceles" type="number" />
+
+            <label for="lado2_isosceles">Lado2:</label>
+            <input id="lado2_isosceles" name="lado2_isosceles" type="number" />
+
+            <label for="lado3_isosceles">Lado3:</label>
+            <input id="lado3_isosceles" name="lado3_isosceles" type="number" />
+
+            <label for="altura_triangulo">Altura:</label>
+            <input
+              id="altura_triangulo"
+              name="altura_triangulo"
+              type="number"
+            />
+          </div>
+          <button onclick="perimetroTrianguloIsosceles()">Perimetro</button>
+          <button onclick="alturaTrianguloIsosceles()">Altura</button>
+        </form>
+      </section>
     </main>
     <script src="./figuras.js"></script>
   </body>
